Removed properties from footer style to stop it overlapping cotent above. Changed font weight when hovering over anchor tag

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -208,17 +208,17 @@ a:hover{
     font-weight: 800;
 }
 
+/**********************Footer Styles*/
 .footer{
     background-color: #003f5c;
     bottom: 0;
     padding: 1rem;
-    position: fixed;
-    width: 100%;
+    width: 100vw;
 }
 
 .footer i{
     color: #f1f1f1;
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 
 @media screen and (min-width: 768px){
@@ -228,4 +228,9 @@ a:hover{
         line-height: 4rem;
         text-align: left;
     }
+
+    .footer i{
+        font-size: 3rem;
+    }
 }
+
